# project-scream

./: .gitignore  CONTRIBUTING.md  Contributing_Regulations.md  README.md  config.py  project-log-sream .md  pyproject.toml  test.ipynb
app/: __init__.py  demo1.py
app/model/: logit.py
app/routes/: eda.py  home.py  models.py  predict.py  vis.py
app/static/css/: main.css  story.css
app/templates/: home.html  layout.html  layout_story.html  predict.html  vis.html
app/templates/eda/: index.html
app/templates/errors/: 404.html  500.html
app/templates/models/: index.html
app/utils/: data.py
eda/: Diabetes_and_HeartDisease_EDA.ipynb  Insurance Coverage EDA.ipynb  depression_EDA.ipynb  eda_heartdiseases.ipynb
literature/: diabetes_risk_data_preparation.md  diabetes_risk_literature_synthesis.md
pipeline/: New_subset_without_NaN.py  Subsetting.py  new_subset.py
